# unicamp-msc-2s2025_SSRL

./: .gitignore  README.md  demo.ipynb  pyproject.toml
code/: 01_data.ipynb  03_test.py  03a_sft_base_model.ipynb  03b_sft_context_model.ipynb  04_evaluation.ipynb  04_results.ipynb
code_to_zip/: 01_data.ipynb  03a_sft_base_model.ipynb  03b_sft_context_model.ipynb  04_evaluation.ipynb
data/: mmlu_test.csv  mmlu_test_sample.csv  mmlu_train.csv
demo/: demo.ipynb
demo/animal_wikipedia_pt_dataset/: state.json
models/gemma-3-1b-it/: .gitattributes  README.md
models/gemma-3-1b-pt/: .gitattributes  README.md
models/gemma-3-1b-pt-contextual-e1-ckpt1600/: adapter_config.json
models/gemma-3-1b-pt-contextual-e1-ckpt1600-sft/best_eval/: adapter_config.json
models/gemma-3-1b-pt-sft/: README.md  adapter_config.json  chat_template.jinja
results/: gemma-3-1b-it_results.csv  gemma-3-1b-pt-contextual-e1-ckpt1600-sft115_best_eval_results.csv  gemma-3-1b-pt-sft105_best_eval_results.csv  gemma-3-1b-pt-sft106_best_eval_results.csv  gemma-3-1b-pt-sft107_best_eval_results.csv
