[tool.poetry]
name = "msc-2s2025-ssrl"
version = "0.1.0"
description = ""
authors = ["zeneto <josealmeidaneto2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.9.0"
transformers = "^4.57.1"
peft = "^0.17.1"
accelerate = "^1.11.0"
datasets = "^4.3.0"
bitsandbytes = "^0.48.2"
pandas = "^2.3.3"
numpy = "^2.3.4"
matplotlib = "^3.10.7"
beautifulsoup4 = "^4.14.2"
ipykernel = "^7.1.0"
psutil = "^7.1.3"
sentence-transformers = "^5.1.2"
pandarallel = "^1.6.5"
ipywidgets = "^8.1.8"
trl = "^0.25.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
